--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 APP_SETTINGS="config.DevelopmentConfig"
 DATABASE_URL="postgresql:///job_scraper"
-FLASK_APP=app.py
+FLASK_APP=src/app.py
 FLASK_ENV="development"
+FLASK_DEBUG=1
+SCRAPY_SETTINGS=src/spiders.settings
+SECRET_KEY="this-is-not-so-secret"
