--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_SETTINGS="config.DevelopmentConfig"
 DATABASE_URL="postgresql:///job_scraper"
-FLASK_APP=src/app.py
+FLASK_APP=app.py
 FLASK_ENV="development"
 FLASK_DEBUG=1
 SCRAPY_SETTINGS=src/spiders.settings
